# llm-router

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: fastapi_server.py  multi_model.py  quickstart.py  with_caching.py
src/llm_router/: __init__.py  cache.py  circuit_breaker.py  models.py  queue.py  router.py  stats.py
src/llm_router/backends/: __init__.py  base.py  ollama.py  openai.py
tests/: conftest.py  test_backends.py  test_circuit_breaker.py  test_queue.py  test_router.py  test_stats.py
